<package>
  <name>librviz_tutorial</name>
  <version>0.7.5</version>
  <description>Tutorial demonstrating the embedding of rviz visualization in another program.</description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <maintainer email="gossow@willowgarage.com">David Gossow</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/librviz_tutorial</url>

  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  
  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
