<package>
  <name>visualization_marker_tutorials</name>
  <version>0.7.5</version>
  <description>marker_tutorials</description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <maintainer email="gossow@willowgarage.com">David Gossow</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/marker_tutorials</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Josh Faust</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>

  </export>
</package>
